LambdaRemover/LambdaRemover/antlr/CsharpSubsetParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from CsharpSubset.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class CsharpSubsetParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, WS=26, SIMPLETYPE=27, NAME=28, TEXT=29, COMMENT=30, NUMBER=31, 
		REFERENCE=32;
	public const int
		RULE_program = 0, RULE_usingStmnt = 1, RULE_classInitialization = 2, RULE_classDefinition = 3, 
		RULE_propertyDefinition = 4, RULE_methodDefinition = 5, RULE_stmnt = 6, 
		RULE_varDeclaration = 7, RULE_assignStmnt = 8, RULE_returnStmnt = 9, RULE_expression = 10, 
		RULE_mathExpression = 11, RULE_methodCallStmnt = 12, RULE_lambdaExpression = 13, 
		RULE_parameterList = 14, RULE_typedArgList = 15, RULE_argList = 16, RULE_parameter = 17, 
		RULE_type = 18, RULE_reference = 19, RULE_delegateType = 20, RULE_compileUnit = 21;
	public static readonly string[] ruleNames = {
		"program", "usingStmnt", "classInitialization", "classDefinition", "propertyDefinition", 
		"methodDefinition", "stmnt", "varDeclaration", "assignStmnt", "returnStmnt", 
		"expression", "mathExpression", "methodCallStmnt", "lambdaExpression", 
		"parameterList", "typedArgList", "argList", "parameter", "type", "reference", 
		"delegateType", "compileUnit"
	};

	private static readonly string[] _LiteralNames = {
		null, "'using'", "';'", "'='", "'new'", "'('", "')'", "'class'", "'{'", 
		"'}'", "'public'", "'private'", "'static'", "'void'", "'return'", "'^'", 
		"'+'", "'-'", "'/'", "'*'", "'=>'", "','", "'Action'", "'Func'", "'<'", 
		"'>'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "WS", "SIMPLETYPE", "NAME", "TEXT", "COMMENT", "NUMBER", "REFERENCE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "CsharpSubset.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static CsharpSubsetParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public CsharpSubsetParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public CsharpSubsetParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		public UsingStmntContext[] usingStmnt() {
			return GetRuleContexts<UsingStmntContext>();
		}
		public UsingStmntContext usingStmnt(int i) {
			return GetRuleContext<UsingStmntContext>(i);
		}
		public ClassDefinitionContext[] classDefinition() {
			return GetRuleContexts<ClassDefinitionContext>();
		}
		public ClassDefinitionContext classDefinition(int i) {
			return GetRuleContext<ClassDefinitionContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICsharpSubsetListener typedListener = listener as ICsharpSubsetListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICsharpSubsetListener typedListener = listener as ICsharpSubsetListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICsharpSubsetVisitor<TResult> typedVisitor = visitor as ICsharpSubsetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 47;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__0) {
				{
				{
				State = 44; usingStmnt();
				}
				}
				State = 49;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 53;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__6) {
				{
				{
				State = 50; classDefinition();
				}
				}
				State = 55;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UsingStmntContext : ParserRuleContext {
		public ITerminalNode NAME() { return GetToken(CsharpSubsetParser.NAME, 0); }
		public UsingStmntContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_usingStmnt; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICsharpSubsetListener typedListener = listener as ICsharpSubsetListener;
			if (typedListener != null) typedListener.EnterUsingStmnt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICsharpSubsetListener typedListener = listener as ICsharpSubsetListener;
			if (typedListener != null) typedListener.ExitUsingStmnt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICsharpSubsetVisitor<TResult> typedVisitor = visitor as ICsharpSubsetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUsingStmnt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UsingStmntContext usingStmnt() {
		UsingStmntContext _localctx = new UsingStmntContext(Context, State);
		EnterRule(_localctx, 2, RULE_usingStmnt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56; Match(T__0);
			State = 57; Match(NAME);
			State = 58; Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassInitializationContext : ParserRuleContext {
		public ReferenceContext reference() {
			return GetRuleContext<ReferenceContext>(0);
		}
		public ITerminalNode[] NAME() { return GetTokens(CsharpSubsetParser.NAME); }
		public ITerminalNode NAME(int i) {
			return GetToken(CsharpSubsetParser.NAME, i);
		}
		public ArgListContext argList() {
			return GetRuleContext<ArgListContext>(0);
		}
		public ClassInitializationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classInitialization; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICsharpSubsetListener typedListener = listener as ICsharpSubsetListener;
			if (typedListener != null) typedListener.EnterClassInitialization(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICsharpSubsetListener typedListener = listener as ICsharpSubsetListener;
			if (typedListener != null) typedListener.ExitClassInitialization(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICsharpSubsetVisitor<TResult> typedVisitor = visitor as ICsharpSubsetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassInitialization(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassInitializationContext classInitialization() {
		ClassInitializationContext _localctx = new ClassInitializationContext(Context, State);
		EnterRule(_localctx, 4, RULE_classInitialization);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 60; reference();
			State = 61; Match(NAME);
			State = 62; Match(T__2);
			State = 63; Match(T__3);
			State = 64; Match(NAME);
			State = 65; Match(T__4);
			State = 67;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NAME) | (1L << NUMBER) | (1L << REFERENCE))) != 0)) {
				{
				State = 66; argList();
				}
			}

			State = 69; Match(T__5);
			State = 70; Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassDefinitionContext : ParserRuleContext {
		public ITerminalNode NAME() { return GetToken(CsharpSubsetParser.NAME, 0); }
		public PropertyDefinitionContext[] propertyDefinition() {
			return GetRuleContexts<PropertyDefinitionContext>();
		}
		public PropertyDefinitionContext propertyDefinition(int i) {
			return GetRuleContext<PropertyDefinitionContext>(i);
		}
		public MethodDefinitionContext[] methodDefinition() {
			return GetRuleContexts<MethodDefinitionContext>();
		}
		public MethodDefinitionContext methodDefinition(int i) {
			return GetRuleContext<MethodDefinitionContext>(i);
		}
		public ClassDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classDefinition; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICsharpSubsetListener typedListener = listener as ICsharpSubsetListener;
			if (typedListener != null) typedListener.EnterClassDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICsharpSubsetListener typedListener = listener as ICsharpSubsetListener;
			if (typedListener != null) typedListener.ExitClassDefinition(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICsharpSubsetVisitor<TResult> typedVisitor = visitor as ICsharpSubsetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassDefinitionContext classDefinition() {
		ClassDefinitionContext _localctx = new ClassDefinitionContext(Context, State);
		EnterRule(_localctx, 6, RULE_classDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 72; Match(T__6);
			State = 73; Match(NAME);
			State = 74; Match(T__7);
			State = 79;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__21) | (1L << T__22) | (1L << SIMPLETYPE))) != 0)) {
				{
				State = 77;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
				case 1:
					{
					State = 75; propertyDefinition();
					}
					break;
				case 2:
					{
					State = 76; methodDefinition();
					}
					break;
				}
				}
				State = 81;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 82; Match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropertyDefinitionContext : ParserRuleContext {
		public VarDeclarationContext varDeclaration() {
			return GetRuleContext<VarDeclarationContext>(0);
		}
		public PropertyDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propertyDefinition; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICsharpSubsetListener typedListener = listener as ICsharpSubsetListener;
			if (typedListener != null) typedListener.EnterPropertyDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICsharpSubsetListener typedListener = listener as ICsharpSubsetListener;
			if (typedListener != null) typedListener.ExitPropertyDefinition(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICsharpSubsetVisitor<TResult> typedVisitor = visitor as ICsharpSubsetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPropertyDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PropertyDefinitionContext propertyDefinition() {
		PropertyDefinitionContext _localctx = new PropertyDefinitionContext(Context, State);
		EnterRule(_localctx, 8, RULE_propertyDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__9 || _la==T__10) {
				{
				State = 84;
				_la = TokenStream.LA(1);
				if ( !(_la==T__9 || _la==T__10) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
			}

			State = 88;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__11) {
				{
				State = 87; Match(T__11);
				}
			}

			State = 90; varDeclaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MethodDefinitionContext : ParserRuleContext {
		public ITerminalNode NAME() { return GetToken(CsharpSubsetParser.NAME, 0); }
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ParameterListContext parameterList() {
			return GetRuleContext<ParameterListContext>(0);
		}
		public StmntContext[] stmnt() {
			return GetRuleContexts<StmntContext>();
		}
		public StmntContext stmnt(int i) {
			return GetRuleContext<StmntContext>(i);
		}
		public ReturnStmntContext returnStmnt() {
			return GetRuleContext<ReturnStmntContext>(0);
		}
		public MethodDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_methodDefinition; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICsharpSubsetListener typedListener = listener as ICsharpSubsetListener;
			if (typedListener != null) typedListener.EnterMethodDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICsharpSubsetListener typedListener = listener as ICsharpSubsetListener;
			if (typedListener != null) typedListener.ExitMethodDefinition(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICsharpSubsetVisitor<TResult> typedVisitor = visitor as ICsharpSubsetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMethodDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MethodDefinitionContext methodDefinition() {
		MethodDefinitionContext _localctx = new MethodDefinitionContext(Context, State);
		EnterRule(_localctx, 10, RULE_methodDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__9 || _la==T__10) {
				{
				State = 92;
				_la = TokenStream.LA(1);
				if ( !(_la==T__9 || _la==T__10) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
			}

			State = 96;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__11) {
				{
				State = 95; Match(T__11);
				}
			}

			State = 100;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__21:
			case T__22:
			case SIMPLETYPE:
				{
				State = 98; type();
				}
				break;
			case T__12:
				{
				State = 99; Match(T__12);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 102; Match(NAME);
			State = 103; Match(T__4);
			State = 105;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__21) | (1L << T__22) | (1L << SIMPLETYPE))) != 0)) {
				{
				State = 104; parameterList();
				}
			}

			State = 107; Match(T__5);
			State = 108; Match(T__7);
			State = 112;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__21) | (1L << T__22) | (1L << SIMPLETYPE) | (1L << NAME) | (1L << REFERENCE))) != 0)) {
				{
				{
				State = 109; stmnt();
				}
				}
				State = 114;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 116;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__13) {
				{
				State = 115; returnStmnt();
				}
			}

			State = 118; Match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StmntContext : ParserRuleContext {
		public VarDeclarationContext varDeclaration() {
			return GetRuleContext<VarDeclarationContext>(0);
		}
		public AssignStmntContext assignStmnt() {
			return GetRuleContext<AssignStmntContext>(0);
		}
		public MethodCallStmntContext methodCallStmnt() {
			return GetRuleContext<MethodCallStmntContext>(0);
		}
		public MethodDefinitionContext methodDefinition() {
			return GetRuleContext<MethodDefinitionContext>(0);
		}
		public ClassInitializationContext classInitialization() {
			return GetRuleContext<ClassInitializationContext>(0);
		}
		public LambdaExpressionContext lambdaExpression() {
			return GetRuleContext<LambdaExpressionContext>(0);
		}
		public StmntContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmnt; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICsharpSubsetListener typedListener = listener as ICsharpSubsetListener;
			if (typedListener != null) typedListener.EnterStmnt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICsharpSubsetListener typedListener = listener as ICsharpSubsetListener;
			if (typedListener != null) typedListener.ExitStmnt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICsharpSubsetVisitor<TResult> typedVisitor = visitor as ICsharpSubsetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmnt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StmntContext stmnt() {
		StmntContext _localctx = new StmntContext(Context, State);
		EnterRule(_localctx, 12, RULE_stmnt);
		try {
			State = 128;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,13,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 120; varDeclaration();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 121; assignStmnt();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				{
				State = 122; methodCallStmnt();
				State = 123; Match(T__1);
				}
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 125; methodDefinition();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 126; classInitialization();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 127; lambdaExpression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarDeclarationContext : ParserRuleContext {
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ITerminalNode NAME() { return GetToken(CsharpSubsetParser.NAME, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public VarDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_varDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICsharpSubsetListener typedListener = listener as ICsharpSubsetListener;
			if (typedListener != null) typedListener.EnterVarDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICsharpSubsetListener typedListener = listener as ICsharpSubsetListener;
			if (typedListener != null) typedListener.ExitVarDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICsharpSubsetVisitor<TResult> typedVisitor = visitor as ICsharpSubsetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVarDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VarDeclarationContext varDeclaration() {
		VarDeclarationContext _localctx = new VarDeclarationContext(Context, State);
		EnterRule(_localctx, 14, RULE_varDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 130; type();
			State = 131; Match(NAME);
			State = 134;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__2) {
				{
				State = 132; Match(T__2);
				State = 133; expression();
				}
			}

			State = 136; Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignStmntContext : ParserRuleContext {
		public ReferenceContext reference() {
			return GetRuleContext<ReferenceContext>(0);
		}
		public MathExpressionContext mathExpression() {
			return GetRuleContext<MathExpressionContext>(0);
		}
		public MethodCallStmntContext methodCallStmnt() {
			return GetRuleContext<MethodCallStmntContext>(0);
		}
		public AssignStmntContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignStmnt; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICsharpSubsetListener typedListener = listener as ICsharpSubsetListener;
			if (typedListener != null) typedListener.EnterAssignStmnt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICsharpSubsetListener typedListener = listener as ICsharpSubsetListener;
			if (typedListener != null) typedListener.ExitAssignStmnt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICsharpSubsetVisitor<TResult> typedVisitor = visitor as ICsharpSubsetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignStmnt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignStmntContext assignStmnt() {
		AssignStmntContext _localctx = new AssignStmntContext(Context, State);
		EnterRule(_localctx, 16, RULE_assignStmnt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 138; reference();
			State = 139; Match(T__2);
			State = 142;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,15,Context) ) {
			case 1:
				{
				State = 140; mathExpression(0);
				}
				break;
			case 2:
				{
				State = 141; methodCallStmnt();
				}
				break;
			}
			State = 144; Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReturnStmntContext : ParserRuleContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ReturnStmntContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_returnStmnt; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICsharpSubsetListener typedListener = listener as ICsharpSubsetListener;
			if (typedListener != null) typedListener.EnterReturnStmnt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICsharpSubsetListener typedListener = listener as ICsharpSubsetListener;
			if (typedListener != null) typedListener.ExitReturnStmnt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICsharpSubsetVisitor<TResult> typedVisitor = visitor as ICsharpSubsetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReturnStmnt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ReturnStmntContext returnStmnt() {
		ReturnStmntContext _localctx = new ReturnStmntContext(Context, State);
		EnterRule(_localctx, 18, RULE_returnStmnt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 146; Match(T__13);
			State = 147; expression();
			State = 148; Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public MathExpressionContext mathExpression() {
			return GetRuleContext<MathExpressionContext>(0);
		}
		public LambdaExpressionContext lambdaExpression() {
			return GetRuleContext<LambdaExpressionContext>(0);
		}
		public ReferenceContext reference() {
			return GetRuleContext<ReferenceContext>(0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICsharpSubsetListener typedListener = listener as ICsharpSubsetListener;
			if (typedListener != null) typedListener.EnterExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICsharpSubsetListener typedListener = listener as ICsharpSubsetListener;
			if (typedListener != null) typedListener.ExitExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICsharpSubsetVisitor<TResult> typedVisitor = visitor as ICsharpSubsetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(Context, State);
		EnterRule(_localctx, 20, RULE_expression);
		try {
			State = 153;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,16,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 150; mathExpression(0);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 151; lambdaExpression();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 152; reference();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
